--- a/angular-auth/src/app/components/login/login.component.html
+++ b/angular-auth/src/app/components/login/login.component.html
@@ -25,7 +25,7 @@
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="register.php" class="text-white-50 fw-bold">Sign Up</a> </p>
+                            <p class="mb-0">Don't have an account? <a href="../regis/regis.component.html" class="text-white-50 fw-bold">Sign Up</a> </p>
                         </div>
 
                     </div>
