--- a/angular-auth/src/app/components/navbar/navbar.component.html
+++ b/angular-auth/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" aria-current="page" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true">Home</a>
+                </li>
             </ul>
         </div>
     </div>
