--- a/angular-auth/src/app/components/login/login.component.html
+++ b/angular-auth/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
+<!--<a href="" routerLink="user/create">Register</a>-->
+<app-navbar></app-navbar>
 <section class="vh-50 gradient-custom">
     <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -25,7 +27,7 @@
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="#" [routerLink]="['/user/create']" class="text-white-50 fw-bold">Sign Up</a> </p>
+                          <p class="mb-0">Don't have an account? <a href="#" [routerLink]="['/user/create']" class="text-white-50 fw-bold">Sign Up</a> </p>
                         </div>
 
                     </div>
