--- a/angular-auth/src/app/components/user/create/create.component.html
+++ b/angular-auth/src/app/components/user/create/create.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <section class="vh-50 gradient-custom">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
